[package]
name = "giffy"
version = "0.2.0"
edition = "2018"
authors = ["Darshan Parajuli <parajulidarshan@gmail.com>"]
description = "A simple GIF decoder written in Rust."
repository = "https://github.com/darshanparajuli/giffy"
readme = "README.md"
keywords = ["gif", "decoder", "giffy", "image"]
categories = ["multimedia::images", "multimedia::encoding"]
license = "MIT"

[dev-dependencies]
image = "0.21.1"
rayon = "1.0.3"
